force-app/main/default/objects/Personnel_Assignment__c/Personnel_Assignment__c.object-meta.xml
<CustomObject>
    <description>Child object for projects, training, or temporary assignments owned by a personnel record.</description>
    <label>Personnel Assignment</label>
    <nameField>
        <displayFormat>ASN-{00000}</displayFormat>
        <label>Assignment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Personnel Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>