force-app/main/default/objects/Personnel_Assignment__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>AND(ISPICKVAL(Status__c, &quot;Active&quot;), OR(ISBLANK(End_Date__c), End_Date__c &gt;= TODAY()))</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>