force-app/main/default/objects/Personnel_Assignment__c/fields/Assignment_Name__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Name__c</fullName>
    <label>Assignment Name</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>