force-app/main/default/objects/Personnel_Assignment__c/fields/Personnel__c.field-meta.xml
<CustomField>
    <fullName>Personnel__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Personnel</label>
    <referenceTo>Personnel__c</referenceTo>
    <relationshipLabel>Assignments</relationshipLabel>
    <relationshipName>Assignments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>