force-app/main/default/objects/Personnel_Assignment__c/validationRules/End_Date_After_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_After_Start</fullName>
    <active>true</active>
    <description>End date must not be before start date.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(End_Date__c)), End_Date__c &lt; Start_Date__c)</errorConditionFormula>
    <errorMessage>End Date cannot be before Start Date.</errorMessage>
</ValidationRule>